# dq-made-easy

./: .copilot-instructions.md  .dockerignore  .env.deployment.example  .env.dev.example  .env.example  .env.prod.example  .env.test.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_5_SETUP_GUIDE.md  AUTOMATIC_VERSIONING.md  AZURE_DEPLOYMENT.md  DEPLOYMENT.md  DOCKER_HUB_DESCRIPTIONS.md  DOCKER_HUB_PUBLISHING.md  DOCKER_IMAGE_LANDSCAPE.md  DOCKER_SERVICES_REFERENCE.md  DOCUMENTATION_GUIDE.md  EXPANDED_MOCK_DATA_SUMMARY.md  HOWTO.md  KONG_DEPLOYMENT.md  KONG_JWT_COMPLETE.md  LICENSE  QUICKSTART_DEPLOY.md  README.md  RELEASE_NOTES_DEV_SEED_REPAIR.md  RELEASE_NOTES_USER.md  TECHNICAL.md  VERSION_MANIFEST.json  azure-pipelines.yml  config-llama.txt  conftest.py  copilot-instructions.md  docker-compose.yml  docker-compose.yml.backup.20260710023737  headers.txt  llama-config-tryouts.txt  minio.license  npmrc.example  (+3 more)
dq-airflow-operator/: README.md  pyproject.toml
dq-airflow-operator/dq_airflow_operator/: __init__.py
dq-airflow-operator/dq_made_easy_airflow_operator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dq-airflow-sdk/: README.md  pyproject.toml
dq-airflow-sdk/dq_made_easy_airflow_sdk.egg-info/: PKG-INFO  SOURCES.txt
dq-api/fastapi/: README.md  alembic.ini  conftest.py  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
dq-api/fastapi/app/: airflow_operator.py  airflow_sdk.py  main.py
dq-api/fastapi/app/core/: api_metrics.py  auth.py  auth_login_metrics.py  config.py  dependencies.py  errors.py  jit_access_metrics.py  log_event.py  logging_config.py  otel_metrics.py  request_context.py  runtime_paths.py  runtime_queues.py  telemetry.py
dq-api/fastapi/app/domain/: comment_governance.py  onboarding_matching.py  status_governance.py  user_names.py
dq-api/fastapi/app/middleware/: api_case_enforcement.py  auth_middleware.py  correlation_id.py  internal_api_contract_validation.py  require_kong_gateway.py  timing.py
dq-api/fastapi/app/schemas/: pagination.py  problem_details.py  pydantic_base.py
dq-api/fastapi/contracts/: README.md
dq-api/fastapi/contracts/baseline/: openapi-legacy-v1.json
dq-api/fastapi/contracts/current/: README.md  api69-behavior-diff-report.json  api69-behavior-diff-report.md  openapi-fastapi-v1.json
dq-api/fastapi/contracts/required/: api64-wave1-migrated-reads.json  api65-cumulative-migrated-surface.json  api65-wave2-migrated-core.json  api66-wave3-admin-edge.json
dq-api/fastapi/dq_made_easy_run_plan_cli.egg-info/: PKG-INFO  SOURCES.txt
dq-api/fastapi/dq_run_plan_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dq-api/fastapi/emr/: __init__.py  dependencies.py  main.py  repository.py  schemas.py
dq-api/fastapi/emr/consumers/: dq_results_consumer.py
dq-api/fastapi/migrations/: README.md  env.py
dq-api/fastapi/scripts/: if_backlog_report.py
dq-api/fastapi/test-results/: if_branch_backlog.md  junit.xml  unit-junit.xml  unit-review-summary.md
dq-api/fastapi/tests/: conftest.py  test_onboarding_proposals.py
dq-cli/: ONBOARDING.md  README.md  pyproject.toml
dq-cli/dq_cli/: __init__.py  mcp_server.py  mcp_test_client.py  onboard.py  run_plan.py
dq-cli/dq_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dq-cli/dq_made_easy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dq-cli/tests/: test_mcp_server_integration.py  test_mcp_test_client.py
dq-domain-validation/: README.md  pyproject.toml
dq-domain-validation/src/dq_domain_validation/: __init__.py  errors.py  presets.py  pydantic.py  registry.py
dq-domain-validation/src/dq_domain_validation.egg-info/: PKG-INFO  SOURCES.txt
dq-domain-validation/src/dq_made_easy_domain_validation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dq-domain-validation/tests/: test_domain_validation.py
dq-utils/: README.md  pyproject.toml
dq-utils/src/dq_made_easy_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dq-utils/src/dq_utils/: __init__.py  auth_utils.py  internal_api_contracts.py  logging_utils.py  spark_jars.py  spark_runtime.py
dq-utils/src/dq_utils.egg-info/: PKG-INFO  SOURCES.txt
dq-utils/tests/: test_auth_utils.py  test_logging_utils.py
emr-delivery-cli/: pyproject.toml
emr-delivery-cli/emr_delivery_cli/: main.py
emr-delivery-sdk/: pyproject.toml
emr-delivery-sdk/src/emr_delivery_sdk/: __init__.py  ddn.py  delivery_id.py  delivery_status.py  delivery_time_event.py  delivery_type.py
emr-utils/: pyproject.toml
emr-utils/src/emr_utils/: __init__.py  py.typed  uuid7.py
(+3497 files in other folders)
