[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-made-easy-airflow-sdk"
version = "0.1.1"
description = "dq-made-easy Airflow 3 SDK and operator for validation run plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]