[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-made-easy-cli"
version = "0.6.3"
description = "Standalone CLI for listing, initiating, and replaying DQ run plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "PyYAML>=6.0.2",
]

[project.scripts]
dq-run-plan = "dq_cli.run_plan:main"
dq-onboard = "dq_cli.onboard:main"
dq-mcp-server = "dq_cli.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["dq_cli"]