[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-made-easy-utils"
version = "0.1.1"
description = "Shared utilities for dq-made-easy Python services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.25.1",
  "requests>=2.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
