[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emr-delivery-sdk"
version = "0.1.0"
description = "EMR Delivery SDK — canonical DeliveryId and Data Delivery Note generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "emr-utils>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emr_delivery_sdk = ["py.typed"]
