[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-made-easy-run-plan-cli"
version = "0.6.3"
description = "CLI for listing, initiating, and replaying DQ run plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.28.1",
  "pydantic>=2.8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.cli"]